Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19126

sanity-lnet test_255 silently fails due to jt_import ignoring failure from lustre_lnet_config_numa_range()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      There's a few issues with this test, but the main problem is that jt_import will silently ignore a failure in yaml_import_global_settings.

      test_255 incorrectly imports a yaml file containing just the global parameters (the intent based on code comments is to import a different yaml file) lustre_lnet_config_numa_range(), and it does this after shutting down LNet. lustre_lnet_config_numa_range() will fail if LNet is not initialized, but the error value returned by this function is ignored by jt_import. Thus it appears that the import succeeded even though LNet is shutdown and nothing is configured.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: